# cfx-natives-data

./: .gitignore  Cargo.toml  README.md  changes.txt
.github/workflows/: daily-update.yml
assets/: metadata.json
fetched/: natives.cfx.json  natives.gta5.json  natives.rdr3.json
fetched_md/: fivem.json  fivem_native.json
original_assets/: metadata.json
plugin/: metadata.json
plugin/lua/: plugin.lua
plugin/lua/natives/gta5/: client.lua  server.lua
plugin/lua/natives/rdr3/: client.lua
src/: enricher.rs  lib.rs  lua_generator.rs  main.rs  types.rs  utils.rs
